# gamedex

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  ruff.toml  vite.config.js
.github/workflows/: ci.yml
apps/companies/: admin.py  apps.py  translation.py
apps/companies/domain/: aggregates.py  entities.py  repositories.py  value_objects.py
apps/companies/fixtures/: companies.json
apps/companies/infrastructure/: models.py
apps/companies/migrations/: 0001_initial.py  0002_companies_name_en_companies_name_es.py
apps/consoles/: admin.py  apps.py  translation.py
apps/consoles/domain/: aggregates.py  entities.py  repositories.py  (+1 more)
apps/franchises/: admin.py  apps.py  translation.py
apps/games/: admin.py  apps.py  translation.py
apps/genres/: admin.py  apps.py  translation.py
apps/regions/: admin.py  apps.py  translation.py
apps/releases/: admin.py  apps.py
apps/web/: apps.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py
data/: brain.db-shm  brain.db-wal
frontend/: app.js
frontend/components/: InfoCard.vue  Layout.vue  NavLink.vue  ThemePicker.vue
frontend/composables/: useTheme.js
frontend/pages/: ApiExplorer.vue  Catalog.vue  Collection.vue  GameDetail.vue
templates/: base.html
tests/: conftest.py  test_companies_api.py  test_consoles_api.py  test_franchises_api.py  test_games_api.py  test_genres_api.py  test_regions_api.py  test_releases_api.py
(+98 files in other folders)
